js/src/lib/parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';
  }

  format(sources) {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s =
        this.location.source &&
        typeof this.location.source.offset === 'function'
          ? this.location.source.offset(s)
          : s;
      const loc =
        this.location.source + ':' + offset_s.line + ':' + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = ''.padEnd(offset_s.line.toString().length, ' ');
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = last - s.column || 1;
        str +=
          '\n --> ' +
          loc +
          '\n' +
          filler +
          ' |\n' +
          offset_s.line +
          ' | ' +
          line +
          '\n' +
          filler +
          ' | ' +
          ''.padEnd(s.column - 1, ' ') +
          ''.padEnd(hatLen, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(
      RegExp.prototype,
      'unicode',
    )
      ? new RegExp('[\\p{C}\\p{Mn}\\p{Mc}]', 'gu')
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable, ch => '\\u{' + hex(ch) + '}');
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/"/g, '\\"')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, ch => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => '\\x' + hex(ch)),
      );
    }

    function classEscape(s) {
      return unicodeEscape(
        s
          .replace(/\\/g, '\\\\')
          .replace(/\]/g, '\\]')
          .replace(/\^/g, '\\^')
          .replace(/-/g, '\\-')
          .replace(/\0/g, '\\0')
          .replace(/\t/g, '\\t')
          .replace(/\n/g, '\\n')
          .replace(/\r/g, '\\r')
          .replace(/[\x00-\x0F]/g, ch => '\\x0' + hex(ch))
          .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => '\\x' + hex(ch)),
      );
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return '"' + literalEscape(expectation.text) + '"';
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(part =>
          Array.isArray(part)
            ? classEscape(part[0]) + '-' + classEscape(part[1])
            : classEscape(part),
        );

        return (
          '[' +
          (expectation.inverted ? '^' : '') +
          escapedParts.join('') +
          ']' +
          (expectation.unicode ? 'u' : '')
        );
      },

      any() {
        return 'any character';
      },

      end() {
        return 'end of input';
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + ' or ' + descriptions[1];

        default:
          return (
            descriptions.slice(0, -1).join(', ') +
            ', or ' +
            descriptions[descriptions.length - 1]
          );
      }
    }

    function describeFound(found) {
      return found ? '"' + literalEscape(found) + '"' : 'end of input';
    }

    return (
      'Expected ' +
      describeExpected(expected) +
      ' but ' +
      describeFound(found) +
      ' found.'
    );
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Query: peg$parseQuery,
  };
  let peg$startRuleFunction = peg$parseQuery;

  const peg$c0 = ';';
  const peg$c1 = ',';
  const peg$c2 = 'as';
  const peg$c3 = 'from';
  const peg$c4 = '~';
  const peg$c5 = ':';
  const peg$c6 = '.';
  const peg$c7 = '`';
  const peg$c8 = '/*';
  const peg$c9 = '*/';
  const peg$c10 = '--';
  const peg$c11 = '//';
  const peg$c12 = '#';
  const peg$c13 = 'select';
  const peg$c14 = 'where';
  const peg$c15 = 'order';
  const peg$c16 = 'by';
  const peg$c17 = 'limit';
  const peg$c18 = 'parameters';
  const peg$c19 = 'functions';
  const peg$c20 = '\\';

  const peg$r0 = /^[a-zA-Z]/;
  const peg$r1 = /^[0-9]/;
  const peg$r2 = /^[a-zA-Z_]/;
  const peg$r3 = /^[a-zA-Z0-9_]/;
  const peg$r4 = /^[sS]/;
  const peg$r5 = /^[eE]/;
  const peg$r6 = /^[lL]/;
  const peg$r7 = /^[cC]/;
  const peg$r8 = /^[tT]/;
  const peg$r9 = /^[fF]/;
  const peg$r10 = /^[rR]/;
  const peg$r11 = /^[oO]/;
  const peg$r12 = /^[mM]/;
  const peg$r13 = /^[wW]/;
  const peg$r14 = /^[hH]/;
  const peg$r15 = /^[dD]/;
  const peg$r16 = /^[bB]/;
  const peg$r17 = /^[yY]/;
  const peg$r18 = /^[iI]/;
  const peg$r19 = /^[pP]/;
  const peg$r20 = /^[aA]/;
  const peg$r21 = /^[uU]/;
  const peg$r22 = /^[nN]/;
  const peg$r23 = /^[a-z]/;
  const peg$r24 = /^[ \t\n\r]/;
  const peg$r25 = /^[\n\r\u2028\u2029]/;

  const peg$e0 = peg$literalExpectation(';', false);
  const peg$e1 = peg$literalExpectation(',', false);
  const peg$e2 = peg$literalExpectation('AS', true);
  const peg$e3 = peg$classExpectation(
    [
      ['a', 'z'],
      ['A', 'Z'],
    ],
    false,
    false,
    false,
  );
  const peg$e4 = peg$literalExpectation('FROM', true);
  const peg$e5 = peg$literalExpectation('~', false);
  const peg$e6 = peg$classExpectation([['0', '9']], false, false, false);
  const peg$e7 = peg$literalExpectation(':', false);
  const peg$e8 = peg$literalExpectation('.', false);
  const peg$e9 = peg$classExpectation(
    [['a', 'z'], ['A', 'Z'], '_'],
    false,
    false,
    false,
  );
  const peg$e10 = peg$classExpectation(
    [['a', 'z'], ['A', 'Z'], ['0', '9'], '_'],
    false,
    false,
    false,
  );
  const peg$e11 = peg$literalExpectation('`', false);
  const peg$e12 = peg$anyExpectation();
  const peg$e13 = peg$classExpectation(['s', 'S'], false, false, false);
  const peg$e14 = peg$classExpectation(['e', 'E'], false, false, false);
  const peg$e15 = peg$classExpectation(['l', 'L'], false, false, false);
  const peg$e16 = peg$classExpectation(['c', 'C'], false, false, false);
  const peg$e17 = peg$classExpectation(['t', 'T'], false, false, false);
  const peg$e18 = peg$classExpectation(['f', 'F'], false, false, false);
  const peg$e19 = peg$classExpectation(['r', 'R'], false, false, false);
  const peg$e20 = peg$classExpectation(['o', 'O'], false, false, false);
  const peg$e21 = peg$classExpectation(['m', 'M'], false, false, false);
  const peg$e22 = peg$classExpectation(['w', 'W'], false, false, false);
  const peg$e23 = peg$classExpectation(['h', 'H'], false, false, false);
  const peg$e24 = peg$classExpectation(['d', 'D'], false, false, false);
  const peg$e25 = peg$classExpectation(['b', 'B'], false, false, false);
  const peg$e26 = peg$classExpectation(['y', 'Y'], false, false, false);
  const peg$e27 = peg$classExpectation(['i', 'I'], false, false, false);
  const peg$e28 = peg$classExpectation(['p', 'P'], false, false, false);
  const peg$e29 = peg$classExpectation(['a', 'A'], false, false, false);
  const peg$e30 = peg$classExpectation(['u', 'U'], false, false, false);
  const peg$e31 = peg$classExpectation(['n', 'N'], false, false, false);
  const peg$e32 = peg$otherExpectation('comment');
  const peg$e33 = peg$literalExpectation('/*', false);
  const peg$e34 = peg$literalExpectation('*/', false);
  const peg$e35 = peg$literalExpectation('--', false);
  const peg$e36 = peg$literalExpectation('//', false);
  const peg$e37 = peg$literalExpectation('#', false);
  const peg$e38 = peg$literalExpectation('SELECT', true);
  const peg$e39 = peg$literalExpectation('WHERE', true);
  const peg$e40 = peg$literalExpectation('ORDER', true);
  const peg$e41 = peg$literalExpectation('BY', true);
  const peg$e42 = peg$literalExpectation('LIMIT', true);
  const peg$e43 = peg$literalExpectation('PARAMETERS', true);
  const peg$e44 = peg$literalExpectation('FUNCTIONS', true);
  const peg$e45 = peg$classExpectation([['a', 'z']], false, false, false);
  const peg$e46 = peg$classExpectation(
    [' ', '\t', '\n', '\r'],
    false,
    false,
    false,
  );
  const peg$e47 = peg$literalExpectation('\\', false);
  const peg$e48 = peg$classExpectation(
    ['\n', '\r', '\u2028', '\u2029'],
    false,
    false,
    false,
  );

  function peg$f0(select, from, where, orderBy, limit, parameters, functions) {
    return {
      type: 'query',
      select,
      from,
      where,
      orderBy,
      limit,
      parameters,
      functions,
    };
  }
  function peg$f1(head, tail) {
    return {type: 'select', fields: makeList(head, tail)};
  }
  function peg$f2(expr, alias) {
    return alias
      ? {expression: expr, alias, type: 'aliasedField'}
      : {expression: expr, type: 'field'};
  }
  function peg$f3(chain, num) {
    return {
      type: 'indexedField',
      selector: text(),
    };
  }
  function peg$f4(left, right) {
    return {
      type: 'subfieldAccess',
      selector: text(),
    };
  }
  function peg$f5(chain) {
    return {
      type: 'simpleField',
      selector: text(),
    };
  }
  function peg$f6(expr) {
    return {
      type: 'mathExpression',
      selector: expr.map(([_, char]) => char).join(''),
    };
  }
  function peg$f7(expr) {
    return {
      type: 'mathExpression',
      selector: expr
        .map(([_, char]) => char)
        .join('')
        .trim(),
    };
  }
  function peg$f8(alias) {
    return alias;
  }
  function peg$f9(head, tail) {
    return head + tail.join('');
  }
  function peg$f10(resource) {
    return {type: 'from', resource};
  }
  function peg$f11(clause) {
    return {type: 'where', clause};
  }
  function peg$f12(clause) {
    return {type: 'orderBy', clause};
  }
  function peg$f13(limit) {
    return {type: 'limit', value: parseInt(limit.join(''), 10)};
  }
  function peg$f14(clause) {
    return {type: 'parameters', clause};
  }
  function peg$f15(code) {
    return {type: 'functions', clause: code};
  }
  function peg$f16(chars) {
    return chars.join('').trim();
  }
  function peg$f17() {
    return '';
  }
  function peg$f18() {
    return '';
  }
  function peg$f19(content) {
    return content
      .map(item => (Array.isArray(item) ? item[1] : item))
      .join('')
      .trim();
  }
  function peg$f20(head, tail) {
    return text();
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{line: 1, column: 1}];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".',
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    );
  }

  function error(message, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return '';
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return {type: 'literal', text, ignoreCase};
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return {type: 'class', parts, inverted, ignoreCase, unicode};
  }

  function peg$anyExpectation() {
    return {type: 'any'};
  }

  function peg$endExpectation() {
    return {type: 'end'};
  }

  function peg$otherExpectation(description) {
    return {type: 'other', description};
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && typeof peg$source.offset === 'function') {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    );
  }

  function peg$parseQuery() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parse__();
    s2 = peg$parseSelectSection();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseFromClause();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseWhereClause();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parseOrderByClause();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$parseLimitClause();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s7 = peg$parseParametersClause();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        if (input.charCodeAt(peg$currPos) === 59) {
          s8 = peg$c0;
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e0);
          }
        }
        if (s8 === peg$FAILED) {
          s8 = null;
        }
        s9 = peg$parseFunctionsClause();
        if (s9 === peg$FAILED) {
          s9 = null;
        }
        s10 = peg$parse__();
        peg$savedPos = s0;
        s0 = peg$f0(s2, s3, s4, s5, s6, s7, s9);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSelectSection() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseSELECT();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse__();
      s4 = peg$parseSelectedField();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$currPos;
        s7 = peg$parse__();
        if (input.charCodeAt(peg$currPos) === 44) {
          s8 = peg$c1;
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e1);
          }
        }
        if (s8 !== peg$FAILED) {
          s9 = peg$parse__();
          s10 = peg$parseSelectedField();
          if (s10 !== peg$FAILED) {
            s7 = [s7, s8, s9, s10];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$currPos;
          s7 = peg$parse__();
          if (input.charCodeAt(peg$currPos) === 44) {
            s8 = peg$c1;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e1);
            }
          }
          if (s8 !== peg$FAILED) {
            s9 = peg$parse__();
            s10 = peg$parseSelectedField();
            if (s10 !== peg$FAILED) {
              s7 = [s7, s8, s9, s10];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        }
        s6 = peg$parseOptionalTrailingComma();
        if (s6 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s4, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOptionalTrailingComma() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (input.charCodeAt(peg$currPos) === 44) {
      s2 = peg$c1;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e1);
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse__();
      s4 = peg$currPos;
      peg$silentFails++;
      s5 = peg$parseFROM();
      peg$silentFails--;
      if (s5 !== peg$FAILED) {
        peg$currPos = s4;
        s4 = undefined;
      } else {
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s1 = [s1, s2, s3, s4];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse__();
      s2 = peg$currPos;
      peg$silentFails++;
      s3 = peg$parseFROM();
      peg$silentFails--;
      if (s3 !== peg$FAILED) {
        peg$currPos = s2;
        s2 = undefined;
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseExpressionTerminator() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse__();
    s2 = input.substr(peg$currPos, 2);
    if (s2.toLowerCase() === peg$c2) {
      peg$currPos += 2;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e2);
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e3);
        }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s1 = [s1, s2, s3];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (input.charCodeAt(peg$currPos) === 44) {
        s2 = peg$c1;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e1);
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$currPos;
        s5 = peg$parse__();
        s6 = peg$currPos;
        s7 = input.substr(peg$currPos, 2);
        if (s7.toLowerCase() === peg$c2) {
          peg$currPos += 2;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e2);
          }
        }
        if (s7 !== peg$FAILED) {
          s8 = peg$currPos;
          peg$silentFails++;
          s9 = input.charAt(peg$currPos);
          if (peg$r0.test(s9)) {
            peg$currPos++;
          } else {
            s9 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e3);
            }
          }
          peg$silentFails--;
          if (s9 === peg$FAILED) {
            s8 = undefined;
          } else {
            peg$currPos = s8;
            s8 = peg$FAILED;
          }
          if (s8 !== peg$FAILED) {
            s7 = [s7, s8];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        if (s6 === peg$FAILED) {
          s6 = peg$currPos;
          s7 = input.substr(peg$currPos, 4);
          if (s7.toLowerCase() === peg$c3) {
            peg$currPos += 4;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e4);
            }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$currPos;
            peg$silentFails++;
            s9 = input.charAt(peg$currPos);
            if (peg$r0.test(s9)) {
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$e3);
              }
            }
            peg$silentFails--;
            if (s9 === peg$FAILED) {
              s8 = undefined;
            } else {
              peg$currPos = s8;
              s8 = peg$FAILED;
            }
            if (s8 !== peg$FAILED) {
              s7 = [s7, s8];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          if (s6 === peg$FAILED) {
            s6 = peg$parseSelectedField();
          }
        }
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        peg$silentFails--;
        if (s4 !== peg$FAILED) {
          peg$currPos = s3;
          s3 = undefined;
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse__();
        s2 = input.substr(peg$currPos, 4);
        if (s2.toLowerCase() === peg$c3) {
          peg$currPos += 4;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e4);
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          peg$silentFails++;
          s4 = input.charAt(peg$currPos);
          if (peg$r0.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e3);
            }
          }
          peg$silentFails--;
          if (s4 === peg$FAILED) {
            s3 = undefined;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseSelectedField() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseFieldAlias();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseExpression() {
    let s0;
